--- a/estilo/layout.css
+++ b/estilo/layout.css
@@ -1,20 +1,45 @@
 /*Sergio Truébano Robles*/
+
 /*Especifidad: 001*/
 header{
     display: flex;
-    flex-wrap: wrap;
-    align-items: baseline;
-    justify-content: center;
+    flex-wrap: wrap; /*Ayuda en el intervalo que no cubre la media query*/
+    align-items: center;
+    justify-content: space-evenly;
 }
-
-nav ul{
+/*Especifidad: 003*/
+nav ul>li{
+    list-style-type: none;
+    padding: 0.2em 0.3em;
+}
+/*Especifidad: 003*/
+header>nav>ul {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around;
-    list-style-type: none;
 }
 
-nav ul>li{
-    padding: 0em 0.3em;
+@media screen and (min-width: 45em) {
+    /*Especifidad: 001*/
+    header{
+        /*Redifinición de dirección de h1 y nav a vertical*/
+        flex-direction: row;
+    }
+    /*Especifidad: 003*/
+    header>nav>ul {
+        /*Redifinición de dirección de navegación a horizontal*/
+        flex-direction: row;
+    }
 }
+@media screen and (max-width: 45em) {
+    /*Especifidad: 001*/
+    header{
+        /*Redifinición de dirección de h1 y nav a vertical*/
+        flex-direction: column;
+    }
+    /*Especifidad: 003*/
+    header>nav>ul {
+        /*Redifinición de dirección de navegación a vertical*/
+        flex-direction: column;
+    }
+}
+
