--- a/estilo/memoria.css
+++ b/estilo/memoria.css
@@ -35,30 +35,35 @@ Gris
 
 */
 
-main div {
+main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 0.8em;
 }
+
+main > :first-child {
+    flex-basis: 100%;
+}
   
-main div article {
+main article {
     width: calc(25% - 0.8em);
     height: 13em;
     transform: scale(1);
     cursor: pointer;
     transform-style: preserve-3d;
     transition: transform .5s;
+    box-shadow: 0.1em 0.1em 0.1em rgba(0,0,0,.3);
 }
   
-main div article[data-state="flip"],
-main div article[data-state="revealed"] {
+main article[data-state="flip"],
+main article[data-state="revealed"] {
     transform: rotateY(180deg);
 }
 
-main div article h3,
-main div article img {
+main article h3,
+main article img {
     width: 100%;
     height: 100%;
     position: absolute; 
@@ -68,7 +73,7 @@ main div article img {
     backface-visibility: hidden;
 }
 
-main div article h3 {
+main article h3 {
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
@@ -76,6 +81,6 @@ main div article h3 {
     font-size: 1em;
 }
 
-main div article img {
+main  article img {
     transform: rotateY(180deg);
 }
