--- a/estilo/sudoku.css
+++ b/estilo/sudoku.css
@@ -18,6 +18,31 @@ p {
     text-align: center;
     border: 0.1em solid #4A4A4A;
 }
+
+p[data-row="0"]{
+    border-top: 0.3em solid #4A4A4A;
+}
+p[data-row="3"],
+p[data-row="6"]{
+    border-top: 0.2em solid #4A4A4A;
+}
+p[data-row="8"]{
+    border-bottom: 0.3em solid #4A4A4A;
+}
+
+p[data-column="0"]{
+    border-left: 0.3em solid #4A4A4A;
+}
+
+p[data-column="3"],
+p[data-column="6"]{
+    border-left: 0.2em solid #4A4A4A;
+}
+
+p[data-column="8"]{
+    border-right: 0.3em solid #4A4A4A;
+}
+
 /*Especifidades: 011*/
 p[data-state="clicked"]{
     background-color: #4A4A4A;
