--- a/estilo/memoria.css
+++ b/estilo/memoria.css
@@ -77,8 +77,8 @@ main article h3 {
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
-    justify-content: space-around;
-    font-size: 1em;
+    justify-content: center; 
+    font-size: 0.8em;
     margin: 0;
 }
 /*Especifidades: 003*/
