--- a/estilo/meteorologia.css
+++ b/estilo/meteorologia.css
@@ -10,16 +10,20 @@ main>section>h3{
     flex-basis: 100%;
 }
 article[data-element="meteo"] {
-    padding: 0em 0.5em;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 0em 0.8em;
     border: 0.3em solid black;
     border-radius: 2em;
+    max-width: 30em;
     /*Color heredado de body*/
     background-color: white;
 }
+article[data-element="meteo"] h4 { 
+    display: block;
+    grid-column: span 4;
+}
 article[data-element="meteo"] ul { 
     list-style-type: disc;
-}
-/*Especificidad 012*/
-article[data-element="meteo"] img {
-    width: 20%;
+    grid-column: span 3;
 }
