--- a/estilo/memoria.css
+++ b/estilo/memoria.css
@@ -1,39 +1,5 @@
-/*
-Colores: 
+/*Sergio Truébano Robles*/
 
-Baby Blue
-#E1EEEF
-
-Midnight Blue
-#41729F
-
-Blue Gray
-#5885AF
-
-Dark Blue
-#274472
-
-Navy Blue
-#00264D
-
------
-EXTRA
------
-
-Amarillo
-#EFD41F
-Morado
-#2D0674
-Rojo
-#931515
-Azul neon
-#2D01F4
-Salmon
-#F99F9F
-Gris
-#B5B5B5
-
-*/
 /*Especifidad: 001*/
 main {
     display: flex;
