--- a/estilo/agenda.css
+++ b/estilo/agenda.css
@@ -1,3 +1,5 @@
+/*Sergio Truébano Robles*/
+
 /*Especificidad 001*/
 main{
     display: flex;
@@ -6,7 +8,7 @@ main{
     align-items: center;
     gap: 3em;
 }
-/*Especificidad 011*/
+/*Especificidad 002,002*/
 main h2 , main p{
     flex-basis: 100%;
 }
