--- a/estilo/noticias.css
+++ b/estilo/noticias.css
@@ -1,3 +1,5 @@
+/*Sergio Truébano Robles*/
+
 /*Especificidad 001*/
 main {
     max-width: 50em; /*Centrado cuando es muy grande la pantalla (>50em)*/
@@ -6,11 +8,13 @@ main {
 /*Especificidad 002*/
 main article {
     background-color: white;
+    color: black;
     border-radius: 1em;
     box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.1);
     margin-bottom: 2em;
     padding: 0.5em 1em;
 }
+/*Especificidad 002*/
 main section{
     border: 0.2em solid black;
     border-radius: 1em;
@@ -19,6 +23,7 @@ main section{
 }
 /*Especificidad 003*/
 main article h3 {
+    /*Color de fondo heredado de article*/
     color: #0056B3;
     margin-bottom: 0.5em;
 }
@@ -33,17 +38,11 @@ main article p {
 /*Especificidad 003*/
 main article cite {
     font-style: italic;
-    color: black;
 }
 /*Especificidad 003*/
 main article footer {
     font-size: 0.8em;
     color: #4A4A4A;
-}
-/*Especificidad 012*/
-main input[data-state="wrong"]{
-    background-color: white;
-    color: black;
 }
 /*Especificidad 012*/
 main input[data-state="wrong"]{
