--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -39,7 +39,7 @@ Gris oscuro
 */
 /*Especifidad: 001*/
 body{
-    font-family: "Trebuche MS", Verdana, Tahoma, sans-serif ;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #E1EEEF;
     color: #000000;
     font-size: 1em;
