--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -1,45 +1,7 @@
 /*Sergio Truébano Robles*/
-/*
-Colores: 
-
-Baby Blue
-#E1EEEF
-
-Midnight Blue
-#41729F
-
-Blue Gray
-#5885AF
-
-Dark Blue
-#274472
-
-Navy Blue
-#00264D
-
------
-EXTRA
------
-
-Amarillo
-#EFD41F
-Morado
-#2D0674
-Rojo
-#931515
-Azul neon
-#2D01F4
-Salmon
-#F99F9F
-Gris
-#B5B5B5
-Gris oscuro
-#4A4A4A
-
-*/
 /*Especifidad: 001*/
 body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Trebuche MS", Verdana, Tahoma, sans-serif ;
     background-color: #E1EEEF;
     color: #000000;
     font-size: 1em;
